--- a/gui/scripts/mns/mns.kv
+++ b/gui/scripts/mns/mns.kv
@@ -15,11 +15,12 @@
         Label:
             halign: 'center'
             valign: 'top'
-            text: 'User Terminal'
+            text: 'CONTROL PANEL'
             text_size: self.size
             font_size: '40sp'
 
     AnchorLayout:
+        cols: 3
         anchor_x: 'center'
 
         Button:
